# cmd/main.go
@@ -5,6 +5,7 @@ import (
 	costume_controller "cosplayrent/controller/costume"
 	midtrans_controller "cosplayrent/controller/midtrans"
 	order_controller "cosplayrent/controller/order"
+	rajaongkir_controller "cosplayrent/controller/rajaongkir"
 	review_controller "cosplayrent/controller/review"
 	user_controller "cosplayrent/controller/user"
 	"cosplayrent/exception"
@@ -18,6 +19,7 @@ import (
 	costume_service "cosplayrent/service/costume"
 	midtrans_service "cosplayrent/service/midtrans"
 	order_service "cosplayrent/service/order"
+	rajaongkir_service "cosplayrent/service/rajaongkir"
 	review_service "cosplayrent/service/review"
 	user_service "cosplayrent/service/user"
 	"log"
@@ -51,11 +53,11 @@ func main() {
 	userController := user_controller.NewUserController(userService)
 
 	costumerRepository := costume_repository.NewCostumeRepository()
-	costumeService := costume_service.NewCostumeService(costumerRepository, DB, validate)
+	costumeService := costume_service.NewCostumeService(costumerRepository, user_repository.NewUserRepository(), DB, validate)
 	costumeController := costume_controller.NewCostumeController(costumeService)
 
 	reviewRepository := review_repository.NewReviewRepository()
-	reviewService := review_service.NewReviewService(reviewRepository, user_repository.UserRepositoryImpl{}, DB, validate)
+	reviewService := review_service.NewReviewService(reviewRepository, user_repository.NewUserRepository(), DB, validate)
 	reviewController := review_controller.NewReviewController(reviewService)
 
 	orderRepository := order_repository.NewOrderRepository()
@@ -66,6 +68,9 @@ func main() {
 	midtransRepository := midtrans_repository.NewMidtransRepository()
 	midtransService := midtrans_service.NewMidtransService(midtransRepository, DB, validate)
 	midtransController := midtrans_controller.NewMidtransController(midtransService)
+
+	rajaongkirService := rajaongkir_service.NewRajaOngkirService(validate)
+	rajaongkirController := rajaongkir_controller.NewRajaOngkirController(rajaongkirService)
 
 	router := httprouter.New()
 	authMiddleware := middleware.NewAuthMiddleware(router)
@@ -78,9 +83,11 @@ func main() {
 	router.DELETE("/api/user/:userUUID", userController.Delete)
 	router.GET("/api/verifytoken", userController.VerifyAndRetrieve)
 
-	router.GET("/api/search/:costumeName", costumeController.FindByName)
+	router.GET("/api/search/:costumeName", authMiddleware.ServeHTTP(costumeController.FindByName))
+	router.GET("/api/seller/:userUUID/:costumeID", costumeController.FindSellerCostumeByCostumeID)
 	router.POST("/api/costume", authMiddleware.ServeHTTP(costumeController.Create))
 	router.GET("/api/costume", costumeController.FindAll)
+	router.GET("/api/find/user/costume/:userUUID", costumeController.FindByUserUUID)
 	router.GET("/api/costume/:costumeID", costumeController.FindById)
 	router.PUT("/api/costume/:costumeID", authMiddleware.ServeHTTP(costumeController.Update))
 	router.DELETE("/api/costume/:costumeID", authMiddleware.ServeHTTP(costumeController.Delete))
@@ -89,6 +96,10 @@ func main() {
 	router.POST("/api/review", reviewController.Create)
 
 	router.POST("/api/order", orderController.Create)
+
+	router.GET("/api/provinces", rajaongkirController.FindProvince)
+	router.GET("/api/city/:provinceID", rajaongkirController.FindCity)
+	router.POST("/api/checkshippment", rajaongkirController.CheckShippment)
 
 	router.POST("/api/midtrans/transaction/:orderID", midtransController.CreateTransaction)
 	router.POST("/api/midtrans/callback", midtransController.MidtransCallBack)
